--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                                     <a class="nav-link" href="#header">Anasayfa<i class="fa fa-home"></i></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#about">Hakkımızda<i class="fa fa-address-card"></i></a>
+                                    <a class="nav-link" href="#about">Hakkımda<i class="fa fa-address-card"></i></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#experience">Deneyim<i class="fa fa-star"></i></a>
@@ -105,8 +105,8 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="mailto:uekapps.cv@gmail.com"><i class="fa fa-download"></i>CV dosyam</a>
-                        <a class="btn" href="#contact"><i class="fa fa-hands-helping"></i>Beni işe al</a>
+                        <a class="btn" href="mailto:uekapps.cv@gmail.com"><i class="fa fa-download"></i>CV</a>
+                        <a class="btn" href="#contact"><i class="fa fa-hands-helping"></i>Bana İş Ver</a>
                     </div>
                 </div>
                 <!-- Large Button End -->
@@ -128,7 +128,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                                     Kendimi geliştirerek profesyonel hizmetler sunmaya çalışıyorum.
                                     Yetiştirilmek üzere iş ilanlarına açığım.
                                 </p>
-                                 <a class="btn" href="#contact">Beni işe al</a>
+                                 <a class="btn" href="#contact">Bana İş Ver</a>
                             </div>
                         </div>
                         <div class="row">
