--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                                     <span>Mart-2021</span>
                                     <h3>Gece Lambam</h3>
                                     <h4>Java - Android Studio</h4>
-                                     <a href="https://play.google.com/store/apps/details?id=com.uekapps.gecelambam" target="_blank"><i>Tıkla Ulaş</i></a>                                                                      
+                                     <a href="https://play.google.com/store/apps/details?id=com.uekapps.gecelamb" target="_blank"><i>Tıkla Ulaş</i></a>                                                                      
                                 </div>
                             </div>
                             <div class="col-md-6">
