--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                                     <figure>
                                         <img src="img/gecelambam.png" class="img-fluid" alt="">
                                         <a href="img/gecelambam.png" class="link-preview" data-lightbox="portfolio" data-title="Gece Lambam" title=""><i class="fa fa-eye"></i></a>
-                                        <a href="https://play.google.com/store/apps/details?id=com.uekapps.gecelambam" target="_blank" class="link-details" title="Burdan Ulaşabilirsiniz"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="https://play.google.com/store/apps/details?id=com.uekapps.gecelambam">Gece Lambam <span>Gece lambası olarak kullanabilirsiniz</span></a>
+                                        <a href="https://play.google.com/store/apps/details?id=com.uekapps.gecelamb" target="_blank" class="link-details" title="Burdan Ulaşabilirsiniz"><i class="fa fa-link"></i></a>
+                                        <a class="portfolio-title" href="https://play.google.com/store/apps/details?id=com.uekapps.gecelamb">Gece Lambam <span>Gece lambası olarak kullanabilirsiniz</span></a>
                                     </figure>
                                 </div>
                             </div>
