--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                             <div class="col-md-6 col-lg-7">
                                 <p>
                                     İsmim Ufuk Enes, yönetim bilişim sistemleri mezunu, yazılım geliştiriciyim.
-                                    Android app, web programlama ve arduino konularına hakimim.
+                                    Android uygulama, web programlama ve arduino ile robotik kodlama konularına hakimim.
                                     Kendimi geliştirerek profesyonel hizmetler sunmaya çalışıyorum.
                                     Yetiştirilmek üzere iş ilanlarına açığım.
                                 </p>
@@ -202,6 +202,14 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                             <h2>Deneyim</h2>
                         </div>
                         <div class="row align-items-center">
+				 <div class="col-md-6">
+                                <div class="exp-col">
+                                    <span>Ağustos-2021</span>
+                                    <h3>PassLock</h3>
+                                    <h4>Java - Android Studio</h4>
+                                     <a href="https://play.google.com/store/apps/details?id=com.uekapps.passlock" target="_blank"><i>Tıkla Ulaş</i></a>                                                                      
+                                </div>
+                            </div>
                             <div class="col-md-6">
                                 <div class="exp-col">
                                     <span>Mart-2021</span>
@@ -298,6 +306,17 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                             </div>
                         </div>
                         <div class="row portfolio-container">
+				<div class="col-lg-4 col-md-6 portfolio-item web-and">
+                                <div class="portfolio-wrap">
+                                    <figure>
+                                        <img src="img/passlocklogo.png" class="img-fluid" alt="Passlock Şifre Üretici">
+                                        <a href="img/passlocklogo.png" data-lightbox="portfolio" data-title="PassLock" class="link-preview" title=""><i class="fa fa-eye"></i></a>
+                                        <a href="https://play.google.com/store/apps/details?id=com.uekapps.passlock" target="_blank" class="link-details" title="Burdan Ulaşabilirsiniz"><i class="fa fa-link"></i></a>
+                                        <a class="portfolio-title" href="https://play.google.com/store/apps/details?id=com.uekapps.passlock">PassLock <span>Güçlü şifreler oluşturabilir, şifrelerinizi saklayabilirsiniz</span></a>
+                                    </figure>
+                                </div>
+                            </div>
+				
                             <div class="col-lg-4 col-md-6 portfolio-item web-and">
                                 <div class="portfolio-wrap">
                                     <figure>
@@ -312,7 +331,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                             <div class="col-lg-4 col-md-6 portfolio-item web-and">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/gecelambam.png" class="img-fluid" alt="">
+                                        <img src="img/gecelambam.png" class="img-fluid" alt="Gece Lambası">
                                         <a href="img/gecelambam.png" class="link-preview" data-lightbox="portfolio" data-title="Gece Lambam" title=""><i class="fa fa-eye"></i></a>
                                         <a href="https://play.google.com/store/apps/details?id=com.uekapps.gecelamb" target="_blank" class="link-details" title="Burdan Ulaşabilirsiniz"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="https://play.google.com/store/apps/details?id=com.uekapps.gecelamb">Gece Lambam <span>Gece lambası olarak kullanabilirsiniz</span></a>
