--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
                                     <p><i class="fa fa-tag"></i>Web - Android & Developer</p>
                                     <p><i class="fa fa-envelope"></i><a href="mailto:appsuek@gmail.com">appsuek@gmail.com</a></p>
                                     <p><i class="fa fa-phone"></i><a href="tel:+905541256999">+90-554-125-6999</a></p>
-                                    <p><i class="fa fa-map-marker"></i>Antalya, TÜRKİYE</p>
+                                    <p><i class="fa fa-map-marker"></i>Ankara, TÜRKİYE</p>
                                     <div class="social">
                                         <a class="btn" href="https://twitter.com/uekapps" target="_blank"><i class="fab fa-twitter"></i></a>
                                         <a class="btn" href="https://play.google.com/store/apps/dev?id=7556614167716303725" target="_blank"><i class="fab fa-google-play"></i></a>
