--- a/index.html
+++ b/index.html
@@ -418,6 +418,9 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
         <script src="lib/waypoints/waypoints.min.js"></script>
         <script src="lib/isotope/isotope.pkgd.min.js"></script>
         <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4653711338960404"
+     crossorigin="anonymous"></script>
         
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
