--- a/privacyzm.html
+++ b/privacyzm.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset='utf-8'>
+      <meta name='viewport' content='width=device-width'>
+      <title>Privacy Policy</title>
+      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    </head>
+    <body>
+
 <h1>Privacy Policy</h1>
 <p>Last updated: April 16, 2024</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
@@ -134,3 +144,7 @@
 <ul>
 <li>By email: appsuek@gmail.com</li>
 </ul>
+
+
+    </body>
+    </html>
