--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
   <div>
     <h1>Hello, I Have Retired!</h1>
     <h1 id="countdown">5</h1>
+	  <p>You will be redirected to another site in 5 seconds. Please do not worry, it's a safe site.</p>
   </div>
 </div>
 
