--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ Ha Bu Arada Ne Arıyorsan Kodlamacımız Ufuk Enes KURT • www.instagram.com/ue
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4653711338960404"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
